--- a/visualization/networks.html
+++ b/visualization/networks.html
@@ -40,7 +40,7 @@ var simulation = d3.forceSimulation()
     .force("center", d3.forceCenter(width / 2, height / 2))
     .force("collide", d3.forceCollide(radius).iterations(10));
 
-d3.json("music_wellness_life.json", function(error, graph) {
+d3.json("music_health_life.json", function(error, graph) {
   if (error) throw error;
 
   //add pie chart info
