added initial position for nodes. these are based on tSNE projection into 2d plane. clustering is now based on hierarchical (agglomerative) clustering rather than girvan-newman.

--- a/visualization/networks.html
+++ b/visualization/networks.html
@@ -154,6 +154,10 @@ function visualize(){
         .selectAll("circle")
         .data(graph.nodes)
         .enter().append("g")
+        .attr("transform", function(d){
+            return `translate(${d.x*10},${d.y*10})`
+        })
+
 
       var circles = node.append("circle")
           .attr("r", function(d){
