--- a/visualization/networks.html
+++ b/visualization/networks.html
@@ -24,7 +24,7 @@ svg {
 </style>
 <h1>Medium Network</h1>
 <!-- visualization area -->
-<svg id="visualization" height="800" width="1200" margin="auto"></svg>
+<svg id="visualization" margin="auto"></svg>
 
 <!-- Check box -->
 <div>
@@ -42,13 +42,18 @@ svg {
 var zoom_handler = d3.zoom()
   .on("zoom", zoom_actions);
 
-var svg = d3.select("svg").call(zoom_handler),
-      width = +svg.attr("width"),
-      height = +svg.attr("height"),
-      radius = 20,
+var width = screen.width*0.8,
+    height = screen.height*0.75,
+    svg = d3.select("svg")
+            .call(zoom_handler)
+            .attr('width', width)
+            .attr('height', height),
+    radius = 20,
       //add encompassing group for the zoom
-      g = svg.append("g")
-        .attr("class", "everything")
+    g = svg.append("g")
+            .attr("class", "everything")
+
+
 //Zoom functions
 function zoom_actions(){
       g.attr("transform", d3.event.transform)
